# advancedCpp-2020

./: .travis.yml  CMakeLists.txt  README.md  script.sh
Examples/: example.py  mechanism.py
include/: NRLayer.h  NRLayerVector.h  NRLayer_desc.h  NRProcess.h  ht1.h  intVector.h  matrix.h  pyVector.h  vector.h
neural_network_files/input/: dense1  dense2  dense3  description  inputMatrix
neural_network_files/output/: output.txt
src/: NR_process_parallel.c  intVector.c  main.c  pyVector.c  teachNetwork.cpp  utility.c  vector.c
src/matrix/: matrix.c  vector.c
src/neural/: NRLayer.c  NRLayerVector.c  NRLayer_desc.c  NR_create_architecture.c  NR_process_linear.c
tests/: generalTests.cpp  main.cpp  testVector.cpp  test_Matrixlib.cpp  test_Neurallib.cpp
tests/test_inputs/: test_MatrixFillFromStream_correct  test_MatrixFillFromStream_wrong
